make sure images don't wrap without calc

--- a/_sass/_case-study.scss
+++ b/_sass/_case-study.scss
@@ -38,7 +38,7 @@
             flex-direction: row;
     margin-left: -2rem;
     &__copy, &__img {
-      width: 48%;
+      width: 47%;
       width: calc(50% - 2rem);
       margin-left: 2rem;
     }
